[tool.poetry]
name = "adv-mla-lab-2"
version = "0.1.0"
description = ""
authors = ["JVL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
jupyterlab = "4.2.3"
prophet = "1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
